updated all dependencies and applied code formatting everywhere